--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,12 @@
     
 }
 
+#app-holder{
+  position: relative;
+  width:1000px;
+  min-height: 1000px;
+}
+
 .map-container{
   color:white;
   position:absolute;
